--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  
+  # Переопредление для сравнения по значению
   equatable: ^2.0.5
+
+  # перехват ошибок
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
