--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,12 @@ dependencies:
   # перехват ошибок
   dartz: ^0.10.1
 
+  #работа с http
+  http: ^0.13.5
+  
+  # сохранение данных кэш
+  shared_preferences: ^2.0.17
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
